--- a/NLP/Fine_Tuning_DistilBert_Poem_Sentiments.ipynb
+++ b/NLP/Fine_Tuning_DistilBert_Poem_Sentiments.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -12,6 +13,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -581,6 +583,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "b2Uevz4JGHZu"
@@ -674,6 +677,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "jOP4b1xKGHZx"
@@ -719,6 +723,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "cziB_79LGHZx"
@@ -730,6 +735,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "kWvJPSCYGHZy"
@@ -1153,6 +1159,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "dw3myIUow0Jy"
@@ -1448,17 +1455,37 @@
         "from torch.nn.functional import cross_entropy\n",
         "\n",
         "def forward_pass_with_loss_and_label(batch):\n",
+        "    \"\"\"\n",
+        "    This function performs a forward pass through the model, computes the loss and predicts labels.\n",
+        "\n",
+        "    Args:\n",
+        "        batch (Dict[str, torch.Tensor]): Dictionary containing the model inputs and labels.\n",
+        "\n",
+        "    Returns:\n",
+        "        Dict[str, Union[torch.Tensor, np.ndarray]]: Dictionary with the computed loss and predicted labels.\n",
+        "    \"\"\"\n",
+        "    # Move the model inputs to the GPU (if available)\n",
+        "    # This is necessary because the model itself is likely on the GPU\n",
+        "    # Only model input names are included, other keys (e.g., 'labels') are ignored\n",
         "    inputs = {k: v.to(device) for k, v in batch.items() \n",
-        "                if k in tokenizer.model_input_names }\n",
-        "    \n",
+        "              if k in tokenizer.model_input_names }\n",
+        "\n",
+        "    # Ensures that gradients are not computed, saving memory\n",
         "    with torch.no_grad():\n",
+        "        # Forward pass through the model\n",
         "        output = model(**inputs)\n",
+        "\n",
+        "        # Predict labels by selecting the argmax of the logits along the last dimension\n",
         "        pred_label = torch.argmax(output.logits, axis=-1)\n",
-        "        loss = cross_entropy(output.logits, batch['label'].to(device), reduction='none' )\n",
-        "        \n",
-        "    return {'loss ': loss.cpu().numpy(), \n",
-        "            'predicted_label ': pred_label.cpu().numpy() }\n",
-        "        \n"
+        "\n",
+        "        # Compute the cross-entropy loss between the logits and true labels\n",
+        "        # reduction='none' ensures that we get a loss value for each sample, not the mean loss\n",
+        "        loss = cross_entropy(output.logits, batch['label'].to(device), reduction='none')\n",
+        "\n",
+        "    # Returns the loss and predicted labels as numpy arrays\n",
+        "    # These are moved to the CPU first, because numpy cannot handle GPU tensors\n",
+        "    return {'loss': loss.cpu().numpy(), \n",
+        "            'predicted_label': pred_label.cpu().numpy()}\n"
       ]
     },
     {
