--- a/NLP/Fine_Tuning_Pegasus_for_Text_Summarization.ipynb
+++ b/NLP/Fine_Tuning_Pegasus_for_Text_Summarization.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "pANRBqu5D3Sv"
@@ -16,6 +17,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -202,7 +204,18 @@
       "source": [
         "def generate_batch_sized_chunks(list_of_elements, batch_size):\n",
         "    \"\"\"split the dataset into smaller batches that we can process simultaneously\n",
-        "    Yield successive batch-sized chunks from list_of_elements.\"\"\"\n",
+        "    Yield successive batch-sized chunks from list_of_elements.\n",
+        "    \n",
+        "    Yields consecutive chunks from a list.\n",
+        "\n",
+        "    Args:\n",
+        "        list_of_elements (List[Any]): The list to be divided into chunks.\n",
+        "        batch_size (int): The size of chunks.\n",
+        "\n",
+        "    Yields:\n",
+        "        List[Any]: A chunk from the list of the specified size.\n",
+        "        \n",
+        "    \"\"\"\n",
         "    for i in range(0, len(list_of_elements), batch_size):\n",
         "        yield list_of_elements[i : i + batch_size]\n",
         "\n",
@@ -210,6 +223,22 @@
         "                               batch_size=16, device=device, \n",
         "                               column_text=\"article\", \n",
         "                               column_summary=\"highlights\"):\n",
+        "    \"\"\"\n",
+        "    Calculates a specified metric on a test dataset.\n",
+        "\n",
+        "    Args:\n",
+        "        dataset (Dataset): The dataset to evaluate.\n",
+        "        metric (Metric): The metric to calculate.\n",
+        "        model (nn.Module): The model to evaluate.\n",
+        "        tokenizer (Tokenizer): The tokenizer to use for text processing.\n",
+        "        batch_size (int, optional): The batch size for evaluation.\n",
+        "        device (torch.device, optional): The device to use for computation.\n",
+        "        column_text (str, optional): The name of the text column in the dataset.\n",
+        "        column_summary (str, optional): The name of the summary column in the dataset.\n",
+        "\n",
+        "    Returns:\n",
+        "        Dict[str, float]: The calculated metric scores.\n",
+        "    \"\"\"\n",
         "    article_batches = list(generate_batch_sized_chunks(dataset[column_text], batch_size))\n",
         "    target_batches = list(generate_batch_sized_chunks(dataset[column_summary], batch_size))\n",
         "\n",
@@ -241,6 +270,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Ss7KHoKPD3S2"
@@ -342,6 +372,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "-JGHLddgD3S3"
@@ -388,6 +419,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -499,6 +531,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
