--- a/NLP/Named_Entity_Recognition_NER_using_spaCy - Extracting_Subject_Verb_Action.ipynb
+++ b/NLP/Named_Entity_Recognition_NER_using_spaCy - Extracting_Subject_Verb_Action.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -12,6 +13,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -371,6 +373,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -399,36 +402,54 @@
    "outputs": [],
    "source": [
     "def return_entities_and_processed_docs(data_frame):\n",
+    "    \"\"\"\n",
+    "    Extracts named entities from a DataFrame and returns them along with the processed docs.\n",
+    "\n",
+    "    Args:\n",
+    "        data_frame (DataFrame): The DataFrame from which to extract named entities.\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: A dictionary mapping entity types to a dictionary of entity names to counts.\n",
+    "        list: A list of processed docs.\n",
+    "    \"\"\"\n",
+    "    # Initialize the dictionary to hold named entities\n",
     "    named_entities = {}\n",
+    "    # Initialize the list to hold processed docs\n",
     "    processed_docs = []\n",
     "    \n",
+    "    # Process each item in the DataFrame\n",
     "    for item in data_frame:\n",
+    "        # Process the item with a language model\n",
     "        doc = nlp(item)\n",
+    "        # Add the processed doc to the list\n",
     "        processed_docs.append(doc)\n",
     "        \n",
+    "        # For each named entity in the doc...\n",
     "        for ent in doc.ents:\n",
-    "            entity_text = ent.text # e.g. WASHINGTON\n",
-    "            entity_type = str(ent.label_) # e.g. 'GPE'\n",
+    "            # Extract the entity text (e.g., 'WASHINGTON')\n",
+    "            entity_text = ent.text\n",
+    "            # Extract the entity type (e.g., 'GPE')\n",
+    "            entity_type = str(ent.label_)\n",
+    "            # Initialize a dictionary to hold the current entities\n",
     "            current_ents = {}\n",
     "            \n",
-    "            #If the Type, say 'GPE' already exists in named_entities then get it      \n",
+    "            # If the entity type is already in the named entities dictionary...\n",
     "            if entity_type in named_entities.keys():\n",
+    "                # Get the dictionary of entity names to counts\n",
     "                current_ents = named_entities.get(entity_type)\n",
     "                \n",
-    "            # and then increase the counter number of the actual entity_text e.g. 'Manhattan'\n",
-    "            # this will just add 1 to the inner dict\n",
+    "            # Increment the count for the entity name\n",
+    "            # This will add 1 to the count in the inner dictionary\n",
     "            current_ents[entity_text] = current_ents.get(entity_text, 0) + 1\n",
     "            \n",
-    "            # then make this updated inner dict to be the new inner dict for\n",
-    "            # the final named_entities\n",
+    "            # Update the inner dictionary for the entity type\n",
     "            named_entities[entity_type] = current_ents\n",
+    "\n",
+    "    # Return the named entities and the processed docs\n",
     "    return named_entities, processed_docs\n",
     "\n",
     "\n",
-    "named_entities, processed_docs = return_entities_and_processed_docs(content_df)\n",
-    "                \n",
-    "                \n",
-    "            "
+    "named_entities, processed_docs = return_entities_and_processed_docs(content_df)\n"
    ]
   },
   {
@@ -4803,6 +4824,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -5031,6 +5053,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -5316,6 +5339,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -5381,6 +5405,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -6142,6 +6167,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
