--- a/NLP/Named_Entity_Recognition_NER_using_spaCy - Extracting_Subject_Verb_Action.ipynb
+++ b/NLP/Named_Entity_Recognition_NER_using_spaCy - Extracting_Subject_Verb_Action.ipynb
@@ -5098,12 +5098,30 @@
    "outputs": [],
    "source": [
     "def calculate_entity_span(document, entity):\n",
+    "    \"\"\"\n",
+    "    Calculate the span of a named entity in a document.\n",
+    "\n",
+    "    Args:\n",
+    "        document (spacy.tokens.Doc): The document to search for the entity.\n",
+    "        entity (str): The entity to find in the document.\n",
+    "\n",
+    "    Returns:\n",
+    "        list: A list of indices representing the span of the entity in the document.\n",
+    "    \"\"\"\n",
+    "    # Initialize a list to hold the indices\n",
     "    indexes = []\n",
+    "    \n",
+    "    # Iterate over the entities in the document\n",
     "    for ent in document.ents:\n",
+    "        # If the entity text matches the entity we're looking for...\n",
     "        if ent.text == entity:\n",
+    "            # Iterate over the range from the entity's start to its end\n",
     "            for i in range(int(ent.start), int(ent.end)):\n",
+    "                # Append the index to the list\n",
     "                indexes.append(i)\n",
-    "    return indexes"
+    "                \n",
+    "    # Return the list of indices\n",
+    "    return indexes\n"
    ]
   },
   {
