--- a/NLP/Named_Entity_Recognition_NER_using_spaCy - Extracting_Subject_Verb_Action.ipynb
+++ b/NLP/Named_Entity_Recognition_NER_using_spaCy - Extracting_Subject_Verb_Action.ipynb
@@ -5185,6 +5185,17 @@
    "outputs": [],
    "source": [
     "def calc_entity_subject_object(document, entity, indexes):\n",
+    "    \"\"\"\n",
+    "    Analyze a document to find actions related to a specific entity.\n",
+    "\n",
+    "    Args:\n",
+    "        document (spacy.tokens.Doc): The document to analyze.\n",
+    "        entity (str): The entity to find actions for.\n",
+    "        indexes (list): A list of indices in the document where the entity appears.\n",
+    "\n",
+    "    Returns:\n",
+    "        None: Prints out the sentence and all actions involving the entity.\n",
+    "    \"\"\"\n",
     "    actions = []\n",
     "    action = ''\n",
     "    participant1 = ''\n",
@@ -5284,6 +5295,17 @@
    ],
    "source": [
     "def return_docs_of_given_ent_type(processed_docs, entity, ent_type):\n",
+    "    \"\"\"\n",
+    "    Extracts sentences from a list of processed documents that contain a given named entity of a specific type.\n",
+    "\n",
+    "    Args:\n",
+    "        processed_docs (list): A list of processed documents. Each document is a spacy.tokens.Doc object.\n",
+    "        entity (str): The named entity to search for.\n",
+    "        ent_type (str): The type of the named entity (e.g. 'ORG', 'PERSON', 'GPE')\n",
+    "\n",
+    "    Returns:\n",
+    "        output_sentences (list): A list of sentences containing the named entity of the specified type.\n",
+    "    \"\"\"\n",
     "    output_sentences = []\n",
     "    for doc in processed_docs:\n",
     "        for sentence in doc.sents:\n",
@@ -6176,6 +6198,17 @@
    ],
    "source": [
     "def visualize_given_ent_type(processed_docs, entity, ent_type):\n",
+    "    \"\"\"\n",
+    "    Visualizes named entity annotations in sentences containing a given named entity of a specific type.\n",
+    "\n",
+    "    Args:\n",
+    "        processed_docs (list): A list of processed documents. Each document is a spacy.tokens.Doc object.\n",
+    "        entity (str): The named entity to search for.\n",
+    "        ent_type (str): The type of the named entity (e.g. 'ORG', 'PERSON', 'GPE')\n",
+    "\n",
+    "    Returns:\n",
+    "        None. Displays inline the named entity annotations for sentences containing the specified entity.\n",
+    "    \"\"\"\n",
     "    for doc in processed_docs:\n",
     "        for sentence in doc.sents:\n",
     "            if entity in [ent.text for ent in sentence.ents if ent.label_ == ent_type ]:\n",
