--- a/NLP/Named_Entity_Recognition_NER_using_spaCy - Extracting_Subject_Verb_Action.ipynb
+++ b/NLP/Named_Entity_Recognition_NER_using_spaCy - Extracting_Subject_Verb_Action.ipynb
@@ -6267,6 +6267,19 @@
    ],
    "source": [
     "def return_docs_of_given_ent_type_custom(processed_docs, entity, ent_type):\n",
+    "    \"\"\"\n",
+    "    Returns sentences containing a given named entity of a specific type, \n",
+    "    but only if there is more than one occurrence of the entity type in the sentence.\n",
+    "\n",
+    "    Args:\n",
+    "        processed_docs (list): A list of processed documents. Each document is a spacy.tokens.Doc object.\n",
+    "        entity (str): The named entity to search for.\n",
+    "        ent_type (str): The type of the named entity (e.g. 'ORG', 'PERSON', 'GPE')\n",
+    "\n",
+    "    Returns:\n",
+    "        output_sentences (list): A list of sentences that contain the specified entity \n",
+    "                                 and have more than one occurrence of the specified entity type.\n",
+    "    \"\"\"\n",
     "    output_sentences = []\n",
     "    for doc in processed_docs:\n",
     "        for sentence in doc.sents:\n",
