--- a/NLP/Named_Entity_Recognition_NER_using_spaCy - Extracting_Subject_Verb_Action.ipynb
+++ b/NLP/Named_Entity_Recognition_NER_using_spaCy - Extracting_Subject_Verb_Action.ipynb
@@ -6688,6 +6688,16 @@
    ],
    "source": [
     "def visualize_conditional_sentences(sentences):\n",
+    "    \"\"\"\n",
+    "    This function visualizes the named entities in the given sentences using the displaCy visualizer from SpaCy.\n",
+    "    It specifically highlights organizations (ORG) in the sentences.\n",
+    "\n",
+    "    Parameters:\n",
+    "    sentences (list): A list of sentences. Each sentence is expected to be a SpaCy Doc object with named entities.\n",
+    "\n",
+    "    Returns:\n",
+    "    None. The function directly renders the visualization in the Jupyter notebook or other environment.\n",
+    "    \"\"\"\n",
     "    colors = {\"ORG\": \"linear-gradient(90deg, #64B5F6, #E0F7FA)\"}\n",
     "    options = {\"ents\": [\"ORG\"], \"colors\": colors}\n",
     "    \n",
