--- a/NLP/Text_Summarization_ BART _T5_Pegasus.ipynb
+++ b/NLP/Text_Summarization_ BART _T5_Pegasus.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "5tJrazWj0mJH"
@@ -12,6 +13,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -115,6 +117,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "vQGzessMvGUN"
@@ -231,6 +234,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "YZNdu7bcvGUP"
@@ -256,6 +260,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Tr1g3imGvGUR"
@@ -309,6 +314,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -435,6 +441,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "qjLeUfVW5-48"
@@ -542,6 +549,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "cYlign897Sd1"
@@ -641,6 +649,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "jmY2JBiG8PlM"
@@ -776,6 +785,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "dxP1r4t5-QOP"
@@ -986,6 +996,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "evBnRNmCNU4H"
@@ -1029,6 +1040,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "GqZPSwDONnq8"
@@ -1253,6 +1265,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "2n10Vi-s2cKl"
@@ -1270,6 +1283,19 @@
       "outputs": [],
       "source": [
         "def calculate_metric_on_baseline_test_ds(dataset, metric, column_text = 'article', column_summary = 'highlights' ):\n",
+        "    \"\"\"\n",
+        "    This function calculates a specified metric on a baseline test dataset for a Natural Language Processing (NLP) task.\n",
+        "    It assumes the task is a text summarization task, where the goal is to generate a summary (e.g., highlights) from a text (e.g., article).\n",
+        "\n",
+        "    Parameters:\n",
+        "    dataset (pandas.DataFrame): The test dataset. It should contain a column for the text and a column for the true summary.\n",
+        "    metric (datasets.Metric): The metric to calculate. This should be a metric object from the Hugging Face datasets library.\n",
+        "    column_text (str, optional): The name of the column in the dataset that contains the text. Defaults to 'article'.\n",
+        "    column_summary (str, optional): The name of the column in the dataset that contains the true summary. Defaults to 'highlights'.\n",
+        "\n",
+        "    Returns:\n",
+        "    score (float): The calculated score of the metric on the test dataset.\n",
+        "    \"\"\"\n",
         "    summaries = [baseline_summary_three_sent(text) for text in dataset[column_text] ]\n",
         "\n",
         "    metric.add_batch(predictions = summaries, references = dataset[column_summary] )\n",
@@ -1429,6 +1455,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "opOiKp2J455L"
@@ -1452,7 +1479,18 @@
         "\n",
         "def generate_batch_sized_chunks(list_of_elements, batch_size):\n",
         "    \"\"\"split the dataset into smaller batches that we can process simultaneously\n",
-        "    Yield successive batch-sized chunks from list_of_elements.\"\"\"\n",
+        "    Yield successive batch-sized chunks from list_of_elements.\n",
+        "    \n",
+        "    Generator function to yield successive batch-sized chunks from list_of_elements.\n",
+        "\n",
+        "    Parameters:\n",
+        "    list_of_elements (list): List of elements to be divided into chunks.\n",
+        "    batch_size (int): The size of each chunk.\n",
+        "\n",
+        "    Yields:\n",
+        "    list: Batch-sized chunk from list_of_elements.\n",
+        "    \n",
+        "    \"\"\"\n",
         "    for i in range(0, len(list_of_elements), batch_size):\n",
         "        yield list_of_elements[i : i + batch_size]\n",
         "\n",
@@ -1460,6 +1498,23 @@
         "                               batch_size=16, device=device, \n",
         "                               column_text=\"article\", \n",
         "                               column_summary=\"highlights\"):\n",
+        "    \"\"\"\n",
+        "    Function to calculate a specified metric on a test dataset for a Natural Language Processing (NLP) task.\n",
+        "    It assumes the task is a text summarization task, where the goal is to generate a summary from a text.\n",
+        "\n",
+        "    Parameters:\n",
+        "    dataset (pandas.DataFrame): The test dataset. It should contain a column for the text and a column for the true summary.\n",
+        "    metric (datasets.Metric): The metric to calculate. This should be a metric object from the Hugging Face datasets library.\n",
+        "    model (transformers.PreTrainedModel): The transformer model to use for text generation.\n",
+        "    tokenizer (transformers.PreTrainedTokenizer): The tokenizer corresponding to the model.\n",
+        "    batch_size (int, optional): The size of the batches to use for processing. Defaults to 16.\n",
+        "    device (str, optional): The device to run the model on. Defaults to the output of torch.cuda.is_available().\n",
+        "    column_text (str, optional): The name of the column in the dataset that contains the text. Defaults to 'article'.\n",
+        "    column_summary (str, optional): The name of the column in the dataset that contains the true summary. Defaults to 'highlights'.\n",
+        "\n",
+        "    Returns:\n",
+        "    score (float): The calculated score of the metric on the test dataset.\n",
+        "    \"\"\"\n",
         "    article_batches = list(generate_batch_sized_chunks(dataset[column_text], batch_size))\n",
         "    target_batches = list(generate_batch_sized_chunks(dataset[column_summary], batch_size))\n",
         "\n",
