--- a/NLP/Topic_Modeling_with_LDA.ipynb
+++ b/NLP/Topic_Modeling_with_LDA.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -12,6 +13,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43,6 +45,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -69,6 +72,27 @@
     "from sklearn.datasets import fetch_20newsgroups\n",
     "\n",
     "def load_dataset(sset, categories):\n",
+    "    \"\"\"\n",
+    "    Function to load 20 newsgroups dataset from sklearn. The dataset is a collection of approximately \n",
+    "    20,000 newsgroup documents, partitioned (nearly) evenly across 20 different newsgroups.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    sset (str): The subset of the dataset to load. This can be 'train', 'test', or 'all' \n",
+    "                to load the training set, the test set, or all dataset.\n",
+    "    \n",
+    "    categories (list of str): The list of categories (newsgroups) to load. If it's an empty list, \n",
+    "                              all categories will be loaded.\n",
+    "    \n",
+    "    Returns:\n",
+    "    newsgroups_dset (sklearn.utils.Bunch): The loaded dataset. It's a dict-like object with the following \n",
+    "                                           attributes:\n",
+    "                                           - data: the text data to learn\n",
+    "                                           - target: the classification labels\n",
+    "                                           - target_names: the meaning of the labels\n",
+    "                                           - DESCR: the full description of the dataset.\n",
+    "\n",
+    "    \"\"\"\n",
+    "    \n",
     "    if categories==[]:\n",
     "        newsgroups_dset = fetch_20newsgroups(subset=sset,\n",
     "                          remove=('headers', 'footers', 'quotes'),\n",
@@ -81,6 +105,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -402,6 +427,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -529,6 +555,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -569,6 +596,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -602,30 +630,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_topic_param(ldamodel, corpus, texts ):\n",
-    "    main_topic = {}\n",
-    "    percentage = {}\n",
-    "    keywords = {}\n",
-    "    text_snippets = {}\n",
+    "def get_topic_param(ldamodel, corpus, texts):\n",
+    "    \"\"\"\n",
+    "    Function to extract the dominant topic, its percentage contribution, keywords and a snippet of the original text \n",
+    "    for each document in the corpus.\n",
+    "\n",
+    "    Parameters:\n",
+    "    ldamodel (gensim.models.ldamodel.LdaModel): The trained LDA model.\n",
+    "    corpus (list of list of (int, float)): The corpus used to train the LDA model. Each document is represented \n",
+    "                                           as a list of (word id, word frequency) tuples.\n",
+    "    texts (list of str): The original text documents.\n",
+    "\n",
+    "    Returns:\n",
+    "    main_topic (dict of int): The dominant topic for each document.\n",
+    "    percentage (dict of float): The percentage contribution of the dominant topic in each document.\n",
+    "    keywords (dict of str): The keywords for the dominant topic in each document.\n",
+    "    text_snippets (dict of str): A snippet of the original text for each document.\n",
+    "    \"\"\"\n",
     "    \n",
+    "    # Initialize dictionaries to hold the results\n",
+    "    main_topic = {}  # to hold the dominant topic for each document\n",
+    "    percentage = {}  # to hold the percentage contribution of the dominant topic in each document\n",
+    "    keywords = {}  # to hold the keywords for the dominant topic in each document\n",
+    "    text_snippets = {}  # to hold a snippet of the original text for each document\n",
+    "    \n",
+    "    # Iterate over all the documents in the corpus\n",
     "    for i, topic_list in enumerate(ldamodel[corpus]):\n",
+    "        # Get the topic distribution for the document\n",
     "        topic = topic_list[0] if ldamodel.per_word_topics else topic_list\n",
     "\n",
-    "        topic = sorted(topic, key = lambda x: (x[1]), reverse = True )\n",
+    "        # Sort the topics by their contribution to the document\n",
+    "        topic = sorted(topic, key = lambda x: (x[1]), reverse = True)\n",
     "        \n",
-    "        for j, (topic_num, topic_contribution ) in enumerate(topic):\n",
-    "            if j == 0:\n",
+    "        # Only the dominant topic, its percentage contribution and its keywords are considered\n",
+    "        for j, (topic_num, topic_contribution) in enumerate(topic):\n",
+    "            if j == 0:  # if this is the dominant topic\n",
+    "                # Get the keywords for the topic\n",
     "                wp = ldamodel.show_topic(topic_num)\n",
-    "                topic_keywords = \", \".join([word for word, prop in wp[:5] ])\n",
+    "                topic_keywords = \", \".join([word for word, prop in wp[:5]])\n",
     "                \n",
-    "                main_topic[i] = int(topic_num) \n",
+    "                # Store the results in the dictionaries\n",
+    "                main_topic[i] = int(topic_num)\n",
     "                percentage[i] = round(topic_contribution, 4)\n",
     "                keywords[i] = topic_keywords\n",
-    "                text_snippets[i] = texts[i][:8]\n",
+    "                text_snippets[i] = texts[i][:8]  # get a snippet of the original text\n",
     "            else:\n",
     "                break\n",
-    "    return main_topic, percentage, keywords, text_snippets     \n",
-    "        "
+    "    \n",
+    "    # Return the dictionaries\n",
+    "    return main_topic, percentage, keywords, text_snippets\n"
    ]
   },
   {
@@ -697,6 +750,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -716,6 +770,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
